# wifi-diag

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-07-23-wifi-diag-plan.md
docs/superpowers/specs/: 2026-07-23-wifi-diag-design.md
tests/: test_analysis.py  test_cli.py  test_collectors.py  test_parsers.py  test_store.py
wifi_diag/: cli.py  config.py  scheduler.py  store.py
wifi_diag/analysis/: bands.py  diagnose.py  trends.py
wifi_diag/collectors/: __init__.py  base.py  latency.py  latency_mock.py  speed.py  speed_mock.py  wifi_linux.py  wifi_mock.py  wifi_windows.py
wifi_diag/fixtures/: iw_link_2ghz.txt  iw_link_5ghz.txt  netsh_2ghz.txt  netsh_5ghz.txt  ping_linux.txt  ping_windows.txt  speedtest.txt
wifi_diag/parsers/: __init__.py  iw_parser.py  netsh_parser.py  ping_parser.py  speedtest_parser.py
