[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wifi-diag"
version = "0.1.0"
description = "WiFi diagnostic agent for Raspberry Pi and Windows"
requires-python = ">=3.9"
dependencies = [
    "speedtest-cli>=2.1.3",
]

[project.scripts]
wifi-diag = "wifi_diag.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
